--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,6 +52,10 @@ body {
     @apply rounded-xl border bg-vivid py-2 px-4 text-center text-sm transition-all text-white cursor-pointer;
   }
 
+  .btn-report {
+    @apply rounded-xl border bg-vivid py-2 px-4 text-center text-sm transition-all text-white cursor-pointer;
+  }
+
   .btn-checkpost {
     @apply rounded-xl border border-vivid py-2 px-4 text-center text-sm transition-all text-vivid hover:text-white hover:bg-vivid hover:border-vivid cursor-pointer;
   }
